hard-gists/8577232/run.log
=== Docker Run Log for 8577232 ===
Started at: Mi 29. Okt 17:50:57 CET 2025

[2025-10-29 17:50:57] START: Running container for 8577232
[2025-10-29 17:50:58] SUCCESS: Container 7a2009051c3e231a0ec178df304565e56f463d4a6dbb95158e447bba544550d3 started for 8577232
=== Container logs for 8577232 ===
  File "/snippet.py", line 42
    print "If you have terminal-notifier, this would be a notification"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8577232 ===
[2025-10-29 17:51:00] INFO: Container 7a2009051c3e231a0ec178df304565e56f463d4a6dbb95158e447bba544550d3 has stopped
